--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ main {
 header {
     display: block;
     background: #5da5a4;
+    margin-bottom: 50px;
 }
 
 .profile {
@@ -41,7 +42,7 @@ header {
     align-items: center;
 }
 .profile-inner{
-    width: 40%;
+    width: 35%;
 }
 
 .profile-images-wrap {
@@ -93,6 +94,21 @@ header {
     letter-spacing: 0.5px;
 }
 
+.tag-role-text {
+    background: hsl(180, 52%, 96%);
+    border-radius: 4px;
+    padding: 0.25em;
+    border-color: hsl(180, 52%, 96%) ;
+    margin-left: 0.30em;
+    margin-right: 0.30em;
+
+}
+
+.tag-role-text:hover {
+    background: #5da5a4;
+    color: #fff;
+}
+
 .tag-level-text {
     background: hsl(180, 52%, 96%);
     border-radius: 4px;
@@ -103,12 +119,22 @@ header {
 
 }
 
+.tag-level-text:hover {
+    background: #5da5a4;
+    color: #fff;
+}
+
 .tag-laguages-text {
     background: hsl(180, 52%, 96%);
     border-radius: 4px;
     padding: 0.25em;
     border-color: hsl(180, 52%, 96%) ;
     margin-left: 0.30em;
-    margin-right: 0.30em;
+    margin-right: 0.30  em;
 
+}
+
+.tag-laguages-text:hover {
+    background: #5da5a4;
+    color: #fff;
 }
