--- a/src/views/template.html
+++ b/src/views/template.html
@@ -2,7 +2,10 @@
     <header>
       <img src="../assets/bg-header-desktop.svg">
     </header>
-    <section class="profiles">
+    <section >
+        <div class="tagbar"></div>
+    </section>
+    <section>
       <Profile
         v-for="profile in profiles"
         :key="profile.id"
