:sparkles: add filter by role

--- a/src/views/template.html
+++ b/src/views/template.html
@@ -10,6 +10,7 @@
         v-for="profile in profiles"
         :key="profile.id"
         :profile="profile"
+        v-on:selectedRole="receiveRole($event)"
         />
     </section>
 </main>
