--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,43 @@ header {
     border-radius: 0.375rem;
     box-shadow: 0 0.2rem 1.5rem rgba(0, 0, 0, 0.2);
     margin-bottom: 25px;
+    align-items: center;
+}
+
+.tag-role{
+    font-family: 'Spartan', sans-serif;
+    background: hsl(180, 52%, 96%);
+    color:#019f86; ;
+    border: none;
+    padding: 5px;
+    border-radius: 4px;
+    font-size: 13px;
+    font-weight: bold;
+    margin-left: 0.90em;
+    padding-right: 10px;
+}
+
+.remove-button{
+    text-align: center;
+    margin-left: -5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.remove-button:hover{
+    background: black;
+    color: white;
+}
+
+.clear-button{
+    background: none;
+    margin-left: 75%;
+}
+
+.clear-button:hover {
+    background: none;
+    color:#019f86; 
+    text-decoration: underline;
 }
 
 .tags{
@@ -167,7 +204,6 @@ button {
     margin-left: 0.30em;
     margin-right: 0.30em;
     transition: 0.15s;
-
 }
 
 button:hover {
@@ -177,9 +213,8 @@ button:hover {
 }
 
 button:focus {
-    background: #5da5a4;
-    color: #fff;
     outline: none;
+    box-shadow: none;
 }
 
 @media screen and (max-width: 800px)  {
@@ -188,6 +223,10 @@ button:focus {
         display: flex;
         width: 400px;
         height: 100px;
+    }
+
+    .clear-button{
+        margin-left: 50%;
     }
 
     .profile {
